@@ -334,12 +334,13 @@ details. */
       185: Export futimens, utimensat.
       186: Remove ancient V8 regexp functions.  Also eliminate old crt0 interface
            which provided its own user_data structure.
+      187: Export cfmakeraw.
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 186
+#define CYGWIN_VERSION_API_MINOR 187
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
