@@ -311,3 +311,14 @@ cfsetispeed (struct termios *in_tp, speed_t speed)
   __toapp_termios (in_tp, tp);
   return res;
 }
+
+extern "C" void
+cfmakeraw(struct termios *tp)
+{
+  tp->c_iflag &= ~(IGNBRK | BRKINT | PARMRK | ISTRIP
+		 | INLCR | IGNCR | ICRNL | IXON);
+  tp->c_oflag &= ~OPOST;
+  tp->c_lflag &= ~(ECHO | ECHONL | ICANON | ISIG | IEXTEN);
+  tp->c_cflag &= ~(CSIZE | PARENB);
+  tp->c_cflag |= CS8;
+}
